// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigateTo should pass data to view component 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div
        data-testid="test"
      >
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`redirectTo should pass data to view component 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div
        data-testid="test"
      >
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should catch and emit rendering error thrown from error view 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    />
  </div>
</DocumentFragment>
`;

exports[`renderView should cause redirection to the first match view if none was matched 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should clear view data when navigation is aborted 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should clear view data when navigation is redirected 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should discard pending view if matched view is reverted 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should discard pending view if matched view is reverted without navigation 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should match views with more params first 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        baz
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should pass props to view container 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
      class="foo"
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should persist view data in history 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        BarTest
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render class component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render error view when requested 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div
        data-testid="error"
      >
        error: bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render functional component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render loader while first view component is being loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        loading
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render loader while first view component is being loaded 2`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render matched view 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render matched view when nested 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div
        brew-view=""
      >
        <div>
          baz
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should retrieve view data when view container is mounted after navigation 1`] = `
<DocumentFragment>
  <div>
    <div
      brew-view=""
    >
      <div>
        baz
      </div>
    </div>
  </div>
</DocumentFragment>
`;
